--- a/README
+++ b/README
@@ -5,3 +5,9 @@ Enable module in bootstrap.php
     'flexiblemigrations' => MODPATH.'flexiblemigrations'
 
 Run the migrations.sql script on your server
+
+
+
+USAGE
+
+Enter url:  yoursite.com/migrations
