--- a/README
+++ b/README
@@ -6,6 +6,9 @@ Enable module in bootstrap.php
 
 Run the migrations.sql script on your server
 
+IMPORTANT: Grant write privileges to application/migrations folder
+
+
 
 
 USAGE
