Kohana 3.2 compatibility and some bug fixes

--- a/README
+++ b/README
@@ -8,6 +8,8 @@ Run the migrations.sql script on your server
 
 IMPORTANT: Grant write privileges to application/migrations folder
 
+ENABLE ORM MODULE!!!!!
+
 
 
 
